# agent-tidb-mvp-demo

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  codex-latest.sh  pyproject.toml  run_codex_subscription_e2e.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
examples/replay-runs/: README.md
examples/replay-runs/42415b9f-e91c-4b0b-87e9-d12604ca7b80/: final_answer.txt  perf.json  sql_audit.jsonl  step_perf.jsonl  timeline.jsonl
examples/replay-runs/7dc4d4f3-c763-4aa7-8fa8-0a2c1b538c15/: final_answer.txt  perf.json  sql_audit.jsonl  step_perf.jsonl  timeline.jsonl
examples/replay-runs/934bc942-f0dd-442f-8c48-ff9edd698a9d/: final_answer.txt  perf.json  sql_audit.jsonl  step_perf.jsonl  timeline.jsonl
examples/replay-runs/fe37758b-ba2d-48a8-8d4c-865a41a5a43f/: final_answer.txt  perf.json  sql_audit.jsonl  step_perf.jsonl  timeline.jsonl
src/zero_autogen_demo/: agent.py  cli.py  config.py  db.py  zero.py
