[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zero-autogen-demo"
version = "0.1.0"
description = "CLI MVP: AutoGen agent autonomously builds schema and SQL on TiDB Zero"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "autogen-agentchat>=0.4.0",
  "autogen-ext[openai,anthropic]>=0.4.0",
  "certifi>=2024.7.4",
  "httpx>=0.27.0",
  "pymysql>=1.1.1",
  "python-dotenv>=1.0.1",
  "typer>=0.12.5",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.3.0",
  "mypy>=1.9.0",
  "pytest>=8.0.0",
  "types-PyMySQL>=1.1.0",
  "types-requests>=2.31.0",
]

[project.scripts]
zero-agent-demo = "zero_autogen_demo.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
